--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 }
 
 img{
-    max-width: 100%$;
+    max-width: 100%;
 }
 
 /* Header */
@@ -208,13 +208,13 @@ a{
     height: 500px;
 }
  */
-#invito{
+.section-title{
     font-size: 50px;
     margin-top: 8rem;
     margin-left: 5rem;
 }
 
-#invito-text{
+.section-text{
     font-size: 24px;
     margin-top: 2rem;
     margin-left: 5rem;
@@ -228,32 +228,48 @@ a{
     justify-content: center;
     margin: auto;
     margin-top: 5rem;
+    margin-bottom: 5rem;
+    color: #23272a;
+    background-color: #f6f6f6;
+    padding-bottom: 10rem;
 }
 
-.main-3-debug{
-    background-color: #d3d3d3;
+/* .main-3-debug{
+    
     height: 600px;
+} */
+
+.section-title-3{
+    font-size: 50px;
+    margin-top: 8rem;
+}
+
+.section-text-3{
+    font-size: 24px;
+    margin-top: 2rem;
 }
 
 .main-3-1{
     width: 30%;
 }
 
-.main-3-1-debug{
+/* .main-3-1-debug{
     background-color: #ffc0cb;
     border: 3px dashed;
     height: 500px;
-}
+} */
 
-.main-3-2-debug{
+.main-3-2{
     width: 40%;
+    margin-left: 5rem;
+    margin-top: 10rem;
 }
 
-.main-3-2-debug{
+/* .main-3-2-debug{
     background-color: #1e90ff;
     border: 3px dashed;
     height: 500px;
-}
+} */
 
 /* Main - Sezione 4 */
 
